GNOME Bugzilla – Bug 697923
Fixes for AnjutaTabber
Last modified: 2013-04-14 18:52:15 UTC
See the attached patches which makes AnjutaTabber work more like the regular GtkNotebook tabs. The patch for size allocation makes the tabs in the message-view quite a bit bigger since we now take into account the padding of the tabs. We can get the tabs smaller by using the newly added AnjutaCloseButton which is now possible since AnjutaTabber behaves better with these patches.
Created attachment 241412 [details] [review] anjuta-tabber: implement gtk_container_get_path_for_child()
Created attachment 241413 [details] [review] anjuta-tabber: rework size allocation 1) Take into account the "focus-padding" style property 2) Take into account the lef/right/top/bottom padding of each tab 3) Don't use deprecated GtkStyle
Created attachment 241414 [details] [review] anjuta-tabber: remove call to gtk_widget_style_attach() We don't use GtkStyle anymore so we don't need to call it.
Created attachment 241415 [details] [review] anjuta-tabber: don't iterate list to check if node is first/last
Review of attachment 241412 [details] [review]: With your patch, I get a frame around each label in the tabs. Do you know how to avoid this?
(In reply to comment #5) > Review of attachment 241412 [details] [review]: > > With your patch, I get a frame around each label in the tabs. Do you know how > to avoid this? Which gtk+ theme do you use? Is there a frame around the label in regular GtkNotebook tabs?
(In reply to comment #6) > Which gtk+ theme do you use? I haven't changed anything so it's the default theme. Now I have recompiled gtk from source so it's possible that it still use some theme information from a previous version. > Is there a frame around the label in regular GtkNotebook tabs? No, they look fine. I have the issue by example on the tabs of the symbol pane (File, Project, Search) and it's fine in the tabs used in the preferences dialog. It's quite possible that it's not related to your patch. Without it, the tab of the symbol looks a bit strange, there is a separation between them. It could be due to a frame which has the same height than the tab but not the same width.
Created attachment 241509 [details] [review] anjuta-tabber: implement gtk_container_get_path_for_child()
I have compiled your latest patch and it looks the same now. If everything is clear, I think you can commit all of them.
Created attachment 241512 [details] [review] anjuta-tabber: rework size allocation 1) Take into account the "focus-padding" style property 2) Take into account the lef/right/top/bottom padding of each tab 3) Don't use deprecated GtkStyle
Attachment 241414 [details] pushed as 4d9f2b9 - anjuta-tabber: remove call to gtk_widget_style_attach() Attachment 241415 [details] pushed as b125900 - anjuta-tabber: don't iterate list to check if node is first/last Attachment 241509 [details] pushed as 36ff693 - anjuta-tabber: implement gtk_container_get_path_for_child() Attachment 241512 [details] pushed as c1a52f7 - anjuta-tabber: rework size allocation