anjuta-tabber: implement gtk_container_get_path_for_child()

https://bugzilla.gnome.org/show_bug.cgi?id=697923